Gnorb: New option gnorb-gnus-tick-all-tracked-messages
Fixes #34

* packages/gnorb/gnorb-gnus.el (gnorb-gnus-tick-all-tracked-messages):
  New option, does what it says.
* packages/gnorb/gnorb-gnus.el (gnorb-gnus-incoming-do-todo): Maybe
  tick messages here.
  (gnorb-gnus-quick-reply): And here.
* packages/gnorb/gnorb.info: Document.

--- a/gnorb.org
+++ b/gnorb.org
@@ -464,6 +464,9 @@ insert an Org link to that record at point.
      if they had the :gnus-attachments key set to "t". This only has
      any effect if you're capturing from a Gnus summary or article
      buffer.
+- `gnorb-gnus-tick-all-tracked-messages' :: When non-nil, always add
+     the tick mark to messages when they are first associated with an
+     Org heading. The mark can be safely deleted afterwards.
 - `gnorb-trigger-todo-default' :: Set to either 'note or 'todo to tell
      `gnorb-gnus-incoming-do-todo' what to do by default. You can
      reach the non-default behavior by calling that function with a
