[gnorb] New option gnorb-gnus-refile-use-outline-path, bump to 1.6.0
* packages/gnorb/gnorb-gnus.el (gnorb-gnus-refile-use-outline-path):
  New option equivalent to `org-refile-use-outline-path'. Also, remove
  defvar for `org-refile-targets'; we require 'org at top-level, and
  shouldn't need it.
* packages/gnorb/gnorb-gnus.el (gnorb-gnus-attach-part):
  (gnorb-gnus-incoming-do-todo):
  (gnorb-gnus-outgoing-do-todo): Use new option.
* packages/gnorb/gnorb.org: Document.

--- a/gnorb.org
+++ b/gnorb.org
@@ -529,6 +529,10 @@ These functions are not bound by default; you might consider:
      This option will be used as the value of `org-refile-targets'
      during that process: see the docstring of `org-refile-targets'
      for the appropriate syntax.
+- `gnorb-gnus-refile-use-outline-path' :: Similar to the previous
+     option, this option will be used as the value of
+     `org-refile-use-outline-path' when selecting a heading: see the
+     its docstring for the meaning of its potential values.
 - `gnorb-gnus-new-todo-capture-key' :: Set this to a single-character
      string pointing at an Org capture template to use when creating
      TODOs from outgoing messages. The template is a regular capture
