[gnorb] Add code path for users with nnselect available
Not flushing new version just yet.

* packages/gnorb/gnorb-gnus.el (gnorb-gnus-nnselect-search): New
function for searching using nnselect instead of nnir.
(gnorb-gnus-search-messages): Pick a code path.
* packages/gnorb/nngnorb.el (gnorb-run-search): Pull most of search
functionality into a separate function that nnselect can call
directly.
(nnir-run-gnorb): For the nnir case, munge the query slightly then
pass it on to the above function.
* packages/gnorb/gnorb.org:
* packages/gnorb/gnorb.texi:
* packages/gnorb/gnorb.info: Document all this.

--- a/gnorb.org
+++ b/gnorb.org
@@ -126,7 +126,9 @@ Email tracking requires the following steps:
    should be enough).
 3. Add a nngnorb entry to your `gnus-secondary-select-methods'
    variable. It will look like (nngnorb "Server name"). This does
-   nothing but provide a place to hang nnir searches.
+   nothing but provide a place to hang nnir searches. If you are using
+   the Gnus that comes with Emacs 28 or later (or check ~(featurep
+   'nnselect)~ to be sure), this step is unnecessary.
 4. Then put a call to `gnorb-tracking-initialize' in your init files.
 5. If you're not using a local archive method for saving your sent
    messages (ie you're using IMAP), you'll also need to tell Gnorb
