--- a/rec-mode.texi
+++ b/rec-mode.texi
@@ -3,7 +3,6 @@
 @setfilename rec-mode.info
 @settitle rec-mode for Emacs
 @set UPDATED 7 November 2020
-@set UPDATED-MONTH November 2020
 @set EDITION 1.8.90
 @set VERSION 1.8.90
 @afourpaper
@@ -23,8 +22,7 @@
 This manual is for rec-mode for Emacs, which is part of the GNU
 recutils suite (version @value{VERSION}, @value{UPDATED}).
 
-Copyright @copyright{} 2012, 2013, 2014, 2015, 2016, 2017, 2018, 2019,
-2020 Jose E. Marchesi
+Copyright @copyright{} 2012-2020 Free Software Foundation, Inc.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
@@ -36,9 +34,9 @@ Documentation License''.
 @end quotation
 @end copying
 
-@dircategory Database
+@dircategory Emacs
 @direntry
-* rec-mode: (rec-mode). Emacs mode for editing recfiles.
+* Rec Mode: (rec-mode). Emacs mode for editing recfiles.
 @end direntry
 
 @titlepage
