--- a/rec-mode.texi
+++ b/rec-mode.texi
@@ -1,5 +1,6 @@
 \input texinfo
 @comment %**start of header
+@documentencoding UTF-8
 @setfilename rec-mode.info
 @settitle rec-mode for Emacs
 @set UPDATED 13 November 2020
@@ -15,8 +16,15 @@
 @end macro
 
 @macro reccmd{key,command}
-@item @kbd{\key\} @tie{}@tie{}@tie{}@tie{}(@code{\command\})
+@item \key\
+@itemx M-x \command\
+@kindex \key\
+@findex \command\
+@c
 @end macro
+
+@c Merge variable and concept indexes
+@synindex cp vr
 
 @copying
 This manual is for rec-mode for Emacs, which is part of the GNU
@@ -64,7 +72,10 @@ This manual documents version @value{VERSION} of rec-mode.
 * Navigation mode::             User-friendly interface for browing recfiles
 * Edition modes::               Edit recfiles in rec-format
 * Configuration::               Adapting rec-mode to your needs
-* GNU Free Documentation License:: Distribution terms for this document
+* Command Index::               Command and Function Index
+* Key Index::                   Key (Character) Index
+* Variable and Concept Index::  Variable and Concept Index
+* GNU Free Documentation License::  Distribution terms for this document
 
 @detailmenu
  --- The Detailed Node Listing ---
@@ -77,22 +88,19 @@ Introduction
 
 Navigation mode
 
-* Record navigation::           Moving through records.
-* Field navigation::            Moving through fields in a record.
-* Field folding::               Hiding and showing the values of fields.
-* Field edition::               Changing the values of fields.
-* Searches::                    Finding records fufilling some criteria.
-* Statistics::                  Counting records.
-* Data integrity::              Verifying the integrity of the recfile.
-
-Edition modes
-
-* Edition modes::               Edit recfiles in rec-format
+* Record navigation::           Moving through records
+* Field navigation::            Moving through fields in a record
+* Field folding::               Hiding and showing the values of fields
+* Field edition::               Changing the values of fields
+* Searches::                    Finding records fulfilling some criteria
+* Statistics::                  Counting records
+* Data integrity::              Verifying the integrity of the recfile
 
 Configuration
 
 * Finding the recutils::        Specifying the location of the recutils.
-* Records appearance::          Setting the way records are displayed.
+* Records appearance::          Setting the way records are displayed
+
 @end detailmenu
 @end menu
 
@@ -123,10 +131,10 @@ rec-mode is implemented in a self-contained elisp file called
 @file{rec-mode.el}.  It can be obtained in several ways:
 
 @itemize @minus
-@item As part of a released tarball of recutils.  @file{rec-mode.el}
-can be found in the @file{etc/} directory in the tarball contents.
+@item From @url{https://elpa.gnu.org/packages/rec-mode.html, GNU ELPA}
+using the built-in Emacs package manager. 
 @item As part of the source tree cloned from the development git
-repo.  @file{rec-mode.el} can be found in the @file{etc/} directory in
+repository of rec-mode.  @file{rec-mode.el} can be found in the root directory of
 the recutils sources tree.
 @item As a single file downloaded form some other location in
 internet.
@@ -134,9 +142,10 @@ internet.
 distribution.
 @end itemize
 
-@noindent In the first three cases you need to tell Emacs where to locate the
+@noindent In the second case you need to tell Emacs where to locate the
 @file{rec-mode.el} file and to load it.  Add the following to your
 @file{.emacs} file.
+
 @lisp
 (add-to-list 'load-path "~/path/to/recmode/")
 (require 'rec-mode)
@@ -151,19 +160,15 @@ have to @code{require} the package.
 @section Activation
 @cindex activation
 
+rec-mode should automatically activate when opening @file{.rec} files.
 To make sure files with extension @file{.rec} use rec-mode, add the
-following line to your @file{.emacs} file.
-@lisp
-(add-to-list 'auto-mode-alist '("\\.rec\\'" . rec-mode))
-@end lisp
 @noindent rec-mode buffers need font-lock to be turned on - this is
 the default in Emacs@footnote{If you don't use font-lock globally,
 turn it on in the rec buffer with @code{(add-hook 'rec-mode-hook
 'turn-on-font-lock)}}.
 
-With this setup, all files with extension @samp{.rec} will be put into
-rec mode.  As an alternative, make the first line of a recfile look
-like this:
+If the file doesn't end in @file{.rec}, make the first line of a
+recfile look like this:
 
 @example
 # -*- mode: rec -*-
@@ -232,7 +237,7 @@ following subsections.
 
 The following commands jump to other records in the buffer.
 
-@table @asis
+@table @kbd
 @reccmd{n,rec-cmd-goto-next-rec}
 Display the next record of the same type in the buffer.
 @*`C-u N n' will move next N times.
@@ -256,11 +261,12 @@ display the first record of the selected type.
 The following commands iterate through the fields in a record, and to
 get information about some of the properties of the fields.
 
-@table @asis
+@table @kbd
 @reccmd{TAB, rec-cmd-goto-next-field}
 Move the cursor to the beginning of the name of the next field in the
 current record.  If the cursor is currently located at the last field
 of the record then move it to the beginning of the first field.
+
 @reccmd{t, rec-cmd-show-type}
 Show information about the type of the field under the cursor, if it
 is defined.
@@ -274,7 +280,7 @@ difficult to have an overview of the contents of the record.  The
 following commands fold and unfold the value of the field under the
 cursor.
 
-@table @asis
+@table @kbd
 @reccmd{SPC, rec-cmd-toggle-field-visibility}
 Toggle the visibility of the field under the cursor.  When a field is
 folded then three dots are displayed in the buffer instead of the
@@ -290,7 +296,7 @@ appearance}.
 
 The following commands change the value of the field under the cursor.
 
-@table @asis
+@table @kbd
 @reccmd{e, rec-cmd-edit-field}
 Edit the value of the field under the cursor.  The specific action
 depends on the type of the field in the corresponding record
@@ -326,7 +332,7 @@ leading and trailing blank characters.
 The following commands jump to the first record in the buffer
 satisfying some criteria.
 
-@table @asis
+@table @kbd
 @reccmd{s q, rec-cmd-select-fast}
 Display the first record having a field whose value matches a given
 fixed pattern.  This is equivalent of using the command line option
@@ -345,7 +351,7 @@ then the search is case-insensitive.
 The following commands allow to count records in the current buffer
 based on some provided criteria.
 
-@table @asis
+@table @kbd
 @reccmd{I, rec-cmd-show-info}
 Show the number of records in the buffer categorized by type.
 @reccmd{#, rec-cmd-count}
@@ -370,7 +376,7 @@ each of the possible values of the enumerated type.
 The integrity of the rec data stored in the file can be checked using
 the following commands.
 
-@table @asis
+@table @kbd
 @reccmd{c, rec-cmd-compile}
 Compile the buffer with @command{recfix} and open a compilation window
 showing the result of the command.  In case some error or warning is
@@ -404,7 +410,7 @@ exceptions to this are the bindings @kbd{c}
 The following commands are used to enter into one of the available
 edition modes from the navigation mode.
 
-@table @asis
+@table @kbd
 @reccmd{R, rec-edit-record}
 Edit the record being navigated.
 @reccmd{T, rec-edit-type}
@@ -416,7 +422,7 @@ Edit the buffer.
 @noindent After doing modifications in the buffer, the user can go
 back to navigation mode by using the following command.
 
-@table @asis
+@table @kbd
 @reccmd{C-c C-c, rec-finish-editing}
 Finish the current edition and return to navigation mode.  If a
 syntactic error was introduced in the edition activity then the error
@@ -426,11 +432,12 @@ is reported in the echo area and navigation mode is not entered.
 @node Configuration
 @chapter Configuration
 
-TBC
+rec-mode can be configured using the customization facilities of
+Emacs. 
 
 @menu
-* Finding the recutils::     Specifying the location of the recutils.
-* Records appearance::       Setting the way records are displayed
+* Finding the recutils::        Specifying the location of the recutils.
+* Records appearance::          Setting the way records are displayed
 @end menu
 
 @node Finding the recutils
@@ -441,14 +448,17 @@ the recutils.  The following variables tell the mode where to find the
 utilities.  The default values of these variables must work if the
 recutils are installed system-wide in the system.
 
-@table @code
-@item rec-recsel
-Name of the @command{recsel} utility from the GNU recutils.
-@item rec-recinf
+@defvar rec-recsel
+Name of the @code{recsel} utility from the GNU recutil.
+@end defvar
+
+@defvar rec-recinf
 Name of the @command{recinf} utility from the GNU recutils.
-@item rec-recfix
+@end defvar
+
+@defvar rec-recfix
 Name of the @command{recfix} utility from the GNU recutils.
-@end table
+@end defvar
 
 @node Records appearance
 @section Records appearance
@@ -456,12 +466,23 @@ Name of the @command{recfix} utility from the GNU recutils.
 The appearance of the records in navigation mode can be customised by
 tweaking the value of the following variables.
 
-@table @code
-@item rec-max-lines-in-fields
+@defvar rec-max-lines-in-fields
 Values in fiels having more than the specified number of lines will be
 hidden by default in navigation mode.  When hidden, an ellipsis is
 shown instead of the value of the field.  Default is @code{15}.
-@end table
+@end defvar
+
+@node Command Index
+@unnumbered Command and Function Index
+@printindex fn
+
+@node Key Index
+@unnumbered Key (Character) Index
+@printindex ky
+
+@node Variable and Concept Index
+@unnumbered Variable and Concept Index
+@printindex vr
 
 @node GNU Free Documentation License
 @appendix GNU Free Documentation License
