--- a/README
+++ b/README
@@ -60,11 +60,12 @@ instructions below, but the gist of it is that you:
    #+end_src
 
    where =<mybranch>= will probably be =master= for most people.
+   [ Note: The name "externals/" is the result of an accident of history.  ]
 
-3. Edit the =externals-list= file to add an entry for =<pkgname>=.
-   It has to have an =:external= property specified but that
+3. Edit the =elpa-packages= file to add an entry for =<pkgname>=.
+   It has to have an =:url= property specified but that
    property can be nil.
-4. =git add externals-list=, =git commit= and =git push=.
+4. =git add elpa-packages=, =git commit= and =git push=.
 
 If you don't have push access to the repository, someone will do steps
 2-4 for you.
@@ -189,6 +190,7 @@ although these should be kept to a minimum.
 
 The copy of the code is not kept in =master= but in the
 =externals/<pkg-name>= branch in the =elpa.git= repository.
+[ Note: The name "externals/" is the result of an accident of history.  ]
 
 To add a new package, first add this =elpa.git= repository as a
 new remote in your existing repository.
@@ -209,29 +211,28 @@ checked out in =$HOME/github/realgud-ipdb=:
    git push elpa master:refs/heads/externals/realgud-ipdb
 #+end_src
 
-Then edit the =externals-list= file as mentioned above, add the line
+Then edit the =elpa-packages= file as mentioned above, add the line
 
 #+begin_src elisp
-   ("realgud-ipdb" :external "https://github.com/realgud/realgud-ipdb")
+   ("realgud-ipdb" :url "https://github.com/realgud/realgud-ipdb")
 #+end_src
 
 and push that change to the master branch of =elpa=.  After it's added to
-the =externals-list= file, the package can be maintained just by
+the =elpa-packages= file, the package can be maintained just by
 pushing changes to the =externals/<pkgname>= branch.
 
-If you wish to check out all the external packages into the =packages=
+If you wish to check out all the packages into the =packages=
 directory, you can run the command:
 
 #+begin_src shell
-   make externals
+   make worktrees
 #+end_src
 
-You can check out a specific external =<pkgname>= into the =packages=
+You can check out a specific package =<pkgname>= into the =packages=
 directory with these commands:
 
-#+begin_src 
-   cd packages
-   git worktree add PACKAGE externals/<pkgname>
+#+begin_src
+   make packages/<pkgname>
 #+end_src
 
 If you already have a =packages/<pkgname>= directory with a previous
@@ -257,7 +258,7 @@ you have two choices:
 ** To install all the packages "in place":
 
 #+begin_src shell
-   make externals
+   make worktrees
    make
 #+end_src
 
